--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <title>Nombre de la tienda</title>
 
     <!-- Fuentes accesibles -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> <!-- Fuentes de Google para mejorar la legibilidad -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
     <!-- Link a los archivos de estilo CSS -->
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     
     <!-- Icono de la página (favicon) PENDIENTE --> 
     <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon"> <!-- Icono que aparece en la pestaña del navegador -->
@@ -34,12 +34,66 @@
 </head>
 <body>
     <header>
-
+        <img class="logo" src="assets/logo/logo.png" alt="Logo">
+        <!--<form class="busqueda" action="/buscar" method="get">
+            <input type="search" name="q" placeholder="Buscar...">
+            <button type="submit">Buscar</button>
+        </form> -->
+        <nav class="navegacion">
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#servicios">Productos</a></li>
+                <li><a href="#contacto">Nosotros</a></li>
+                <li><a href="#contacto">Blog</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
+        <section class="brand">
+            <img class="logo" src="assets/logo/logo.png" alt="Logo">
+            <h3 class="tagline">Productos únicos para darle un toque especial a la vida de tu mascota.</h3>
+            <p>En ColorPaws, nos especializamos en ofrecer una gran variedad de productos únicos y adorables para tus animales. Desde juguetes, camas, hasta accesorios divertidos con un toque de estilo único, todos pensados para hacer que tu mascota luzca y se sienta increíble. ¡Explora nuestro catálogo y dale un toque de color a la vida de tu peludo!</p>
+        </section>
+        <section class="main-section">
 
+        </section>
+        <section class="newsletter">
+
+        </section>
     </main>
     <footer>
-        
+        <section class="footer-socials">
+            <ul>
+              <li><a href="https://facebook.com" target="_blank">
+                <img src="facebook-icon.png" alt="Facebook">
+              </a></li>
+              <li><a href="https://instagram.com" target="_blank">
+                <img src="instagram-icon.png" alt="Instagram">
+              </a></li>
+              <li><a href="https://twitter.com" target="_blank">
+                <img src="twitter-icon.png" alt="Twitter">
+              </a></li>
+            </ul>
+        </section>
+        <nav class="footer-links">
+            <ul>
+              <li><a href="/acerca-de-nosotros">Acerca de</a></li>
+              <li><a href="/politica-privacidad">Privacidad</a></li>
+              <li><a href="/envio-entrega">Envío</a></li>
+            </ul>
+        </nav>
+        <section class="footer-apps">
+            <ul>
+              <li><a href="https://www.apple.com/app-store/">
+                <img src="app-store-icon.png" alt="App Store">
+              </a></li>
+              <li><a href="https://play.google.com/">
+                <img src="google-play-icon.png" alt="Google Play">
+              </a></li>
+            </ul>
+        </section>
+        <p class="footer-copyright">
+            &copy; 2024 Pitch'Up. Todos los derechos reservados.
+        </p>
     </footer>
 </body>
