"Va cogiendo color (nunca mejor dicho)"

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
 </head>
 <body>
     <header>
+        <!--<svg xmlns="http://www.w3.org/2000/svg" id="wave" transform="rotate(180)" viewBox="0 0 1440 100">
+            <defs>
+                <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
+                  <stop stop-color="rgba(144, 168, 195, 1)" offset="0%"></stop>
+                  <stop stop-color="rgba(144, 160, 195, 1)" offset="100%"></stop>
+                </linearGradient>
+              </defs>
+              <path style="opacity:1" fill="url(#sw-gradient-0)" d="M0,90L10,75C20,60,40,30,60,23.3C80,17,100,33,120,48.3C140,63,160,77,180,81.7C200,87,220,83,240,68.3C260,53,280,27,300,28.3C320,30,340,60,360,73.3C380,87,400,83,420,76.7C440,70,460,60,480,60C500,60,520,70,540,63.3C560,57,580,33,600,23.3C620,13,640,17,660,25C680,33,700,47,720,46.7C740,47,760,33,780,35C800,37,820,53,840,65C860,77,880,83,900,80C920,77,940,63,960,58.3C980,53,1000,57,1020,48.3C1040,40,1060,20,1080,18.3C1100,17,1120,33,1140,38.3C1160,43,1180,37,1200,35C1220,33,1240,37,1260,41.7C1280,47,1300,53,1320,48.3C1340,43,1360,27,1380,31.7C1400,37,1420,63,1430,76.7L1440,90L1440,100L1430,100C1420,100,1400,100,1380,100C1360,100,1340,100,1320,100C1300,100,1280,100,1260,100C1240,100,1220,100,1200,100C1180,100,1160,100,1140,100C1120,100,1100,100,1080,100C1060,100,1040,100,1020,100C1000,100,980,100,960,100C940,100,920,100,900,100C880,100,860,100,840,100C820,100,800,100,780,100C760,100,740,100,720,100C700,100,680,100,660,100C640,100,620,100,600,100C580,100,560,100,540,100C520,100,500,100,480,100C460,100,440,100,420,100C400,100,380,100,360,100C340,100,320,100,300,100C280,100,260,100,240,100C220,100,200,100,180,100C160,100,140,100,120,100C100,100,80,100,60,100C40,100,20,100,10,100L0,100Z"></path>
+        </svg> -->
         <img class="logo" src="assets/logo/logo.png" alt="Logo">
         <!--<form class="busqueda" action="/buscar" method="get">
             <input type="search" name="q" placeholder="Buscar...">
@@ -50,9 +59,27 @@
     </header>
     <main>
         <section class="brand">
+            <div class="perros">
+                <div class="perros-wrapper">
+                  <img src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
+                  <img src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
+                  <img src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
+                  <img src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
+                  <img src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
+                  <img src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
+                  <img src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
+                  <img src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
+                  <img src="assets/miscelanea/Perros/nobg/normalizados/perro1.PNG" alt="Logo">
+                  <img src="assets/miscelanea/Perros/nobg/normalizados/perro2.PNG" alt="Logo">
+                  <img src="assets/miscelanea/Perros/nobg/normalizados/perro3.PNG" alt="Logo">
+                  <img src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
+                </div>
+            </div>
             <img class="logo" src="assets/logo/logo.png" alt="Logo">
-            <h3 class="tagline">Productos únicos para darle un toque especial a la vida de tu mascota.</h3>
+            <!--
+            <h3 class="tagline">¡Productos únicos para darle un toque especial a la vida de tu mascota!</h3>
             <p>En ColorPaws, nos especializamos en ofrecer una gran variedad de productos únicos y adorables para tus animales. Desde juguetes, camas, hasta accesorios divertidos con un toque de estilo único, todos pensados para hacer que tu mascota luzca y se sienta increíble. ¡Explora nuestro catálogo y dale un toque de color a la vida de tu peludo!</p>
+        -->
         </section>
         <section class="main-section">
 
@@ -62,16 +89,26 @@
         </section>
     </main>
     <footer>
+        <div class="footer-background"></div>
         <section class="footer-socials">
             <ul>
               <li><a href="https://facebook.com" target="_blank">
-                <img src="facebook-icon.png" alt="Facebook">
+                <img src="assets/social/facebook-w.png" alt="Facebook">
               </a></li>
               <li><a href="https://instagram.com" target="_blank">
-                <img src="instagram-icon.png" alt="Instagram">
+                <img src="assets/social/instagram-w.png" alt="Instagram">
               </a></li>
               <li><a href="https://twitter.com" target="_blank">
-                <img src="twitter-icon.png" alt="Twitter">
+                <img src="assets/social/twitter-w.png" alt="Twitter">
+              </a></li>
+              <li><a href="https://tiktok.com" target="_blank">
+                <img src="assets/social/tik-tok-w.png" alt="Tik-Tok">
+              </a></li>
+              <li><a href="https://pinterest.com" target="_blank">
+                <img src="assets/social/pinterest-w.png" alt="Pinterest">
+              </a></li>
+              <li><a href="https://youtube.com" target="_blank">
+                <img src="assets/social/youtube-w.png" alt="Youtube">
               </a></li>
             </ul>
         </section>
@@ -82,18 +119,23 @@
               <li><a href="/envio-entrega">Envío</a></li>
             </ul>
         </nav>
-        <section class="footer-apps">
-            <ul>
-              <li><a href="https://www.apple.com/app-store/">
-                <img src="app-store-icon.png" alt="App Store">
-              </a></li>
-              <li><a href="https://play.google.com/">
-                <img src="google-play-icon.png" alt="Google Play">
-              </a></li>
-            </ul>
-        </section>
-        <p class="footer-copyright">
-            &copy; 2024 Pitch'Up. Todos los derechos reservados.
-        </p>
+        <div class= "footer-right">
+            <section class="footer-apps">
+                <ul>
+                  <li><a href="https://www.apple.com/app-store/">
+                    <img src="assets/social/app-store.png" alt="App Store">
+                  </a></li>
+                  <li><a href="https://play.google.com/">
+                    <img src="assets/social/play-store.png" alt="Google Play">
+                  </a></li>
+                </ul>
+            </section>
+            <p class="footer-copyright">
+                &copy; 2025 Nombre del sitio. Todos los derechos reservados.
+            </p>
+            <p>
+                Pelo. Pico. Batas
+            </p>
+        </div>
     </footer>
 </body>
