"Pero largo, largo..."

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-
+    <link href="https://db.onlinewebfonts.com/c/9c080e9c6cab37228b6efdfd9fb6e2f9?family=Railey-PersonalUse" rel="stylesheet">
+    
     <!-- Link a los archivos de estilo CSS -->
     <link rel="stylesheet" href="css/styles.css">
     
@@ -34,16 +35,8 @@
 </head>
 <body>
     <header>
-        <!--<svg xmlns="http://www.w3.org/2000/svg" id="wave" transform="rotate(180)" viewBox="0 0 1440 100">
-            <defs>
-                <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
-                  <stop stop-color="rgba(144, 168, 195, 1)" offset="0%"></stop>
-                  <stop stop-color="rgba(144, 160, 195, 1)" offset="100%"></stop>
-                </linearGradient>
-              </defs>
-              <path style="opacity:1" fill="url(#sw-gradient-0)" d="M0,90L10,75C20,60,40,30,60,23.3C80,17,100,33,120,48.3C140,63,160,77,180,81.7C200,87,220,83,240,68.3C260,53,280,27,300,28.3C320,30,340,60,360,73.3C380,87,400,83,420,76.7C440,70,460,60,480,60C500,60,520,70,540,63.3C560,57,580,33,600,23.3C620,13,640,17,660,25C680,33,700,47,720,46.7C740,47,760,33,780,35C800,37,820,53,840,65C860,77,880,83,900,80C920,77,940,63,960,58.3C980,53,1000,57,1020,48.3C1040,40,1060,20,1080,18.3C1100,17,1120,33,1140,38.3C1160,43,1180,37,1200,35C1220,33,1240,37,1260,41.7C1280,47,1300,53,1320,48.3C1340,43,1360,27,1380,31.7C1400,37,1420,63,1430,76.7L1440,90L1440,100L1430,100C1420,100,1400,100,1380,100C1360,100,1340,100,1320,100C1300,100,1280,100,1260,100C1240,100,1220,100,1200,100C1180,100,1160,100,1140,100C1120,100,1100,100,1080,100C1060,100,1040,100,1020,100C1000,100,980,100,960,100C940,100,920,100,900,100C880,100,860,100,840,100C820,100,800,100,780,100C760,100,740,100,720,100C700,100,680,100,660,100C640,100,620,100,600,100C580,100,560,100,540,100C520,100,500,100,480,100C460,100,440,100,420,100C400,100,380,100,360,100C340,100,320,100,300,100C280,100,260,100,240,100C220,100,200,100,180,100C160,100,140,100,120,100C100,100,80,100,60,100C40,100,20,100,10,100L0,100Z"></path>
-        </svg> -->
-        <img class="logo" src="assets/logo/logo.png" alt="Logo">
+        <div class= "header-background"></div>
+        <img class="logo" src="assets/logo/logo2.png" alt="Logo">
         <!--<form class="busqueda" action="/buscar" method="get">
             <input type="search" name="q" placeholder="Buscar...">
             <button type="submit">Buscar</button>
@@ -75,17 +68,52 @@
                   <img src="assets/miscelanea/Perros/nobg/normalizados/perro4.PNG" alt="Logo">
                 </div>
             </div>
-            <img class="logo" src="assets/logo/logo.png" alt="Logo">
+            <img class="logo" src="assets/logo/logo2.png" alt="Logo">
             <!--
             <h3 class="tagline">¡Productos únicos para darle un toque especial a la vida de tu mascota!</h3>
             <p>En ColorPaws, nos especializamos en ofrecer una gran variedad de productos únicos y adorables para tus animales. Desde juguetes, camas, hasta accesorios divertidos con un toque de estilo único, todos pensados para hacer que tu mascota luzca y se sienta increíble. ¡Explora nuestro catálogo y dale un toque de color a la vida de tu peludo!</p>
         -->
         </section>
         <section class="main-section">
+          <div class="articulo">
+            <img src="assets/miscelanea/Borrar/crying-banana-cat-meme.png" alt="Artículo 3">
+            <!--<img src="path/to/image1.jpg" alt="Artículo 1">
+            <h2>Categoría 1</h2>-->
+          </div>
+          <div class="articulo">
+            <img src="assets/miscelanea/Borrar/crying-banana-cat-meme.png" alt="Artículo 3">
+            <!--<img src="path/to/image2.jpg" alt="Artículo 2">
+            <h2>Categoría 4</h2>-->
+          </div>
+          <div class="articulo">
+            <img src="assets/miscelanea/Borrar/crying-banana-cat-meme.png" alt="Artículo 3">
+            <p>Aquí van cosas</p>
+            <!--<img src="path/to/image3.jpg" alt="Artículo 3">
+            <h2>Categoría 3</h2>-->
+          </div>
 
         </section>
         <section class="newsletter">
-
+            <div class= "newsletter-izquierda">
+              <img src="assets/newsletter/cat-newsletter.png" alt="Logo">
+              <div class= "ventajas">
+                <h1>Paw News</h1>
+                <h3>Lo mejor para tu mascota</h3>
+                <ul>
+                  <li><p><i class="fas fa-paw"></i>Énterate de nuestras novedades</p></li>
+                  <li><p><i class="fas fa-paw"></i>Tips para mimar a tu mascota</p></li>
+                  <li><p><i class="fas fa-paw"></i>Descuentos irresistibles</p></li>
+                  <li><p><i class="fas fa-paw"></i>Noticias frescas y peludas</p></li>
+                </ul>
+              </div>
+            </div>
+            <div class="newsletter-derecha">
+              <form class="newsletter-register">
+                  <input type="email" name="email" placeholder="Dirección de e-mail" required>
+                  <button type="submit">Regístrate</button>
+              </form>
+              <p>Al registrarte, aceptas recibir nuestras novedades, ofertas y actualizaciones por correo electrónico. Puedes cancelar tu suscripción en cualquier momento.</p>
+            </div>
         </section>
     </main>
     <footer>
@@ -123,10 +151,10 @@
             <section class="footer-apps">
                 <ul>
                   <li><a href="https://www.apple.com/app-store/">
-                    <img src="assets/social/app-store.png" alt="App Store">
+                    <img src="assets/social/app-store-w.png" alt="App Store">
                   </a></li>
                   <li><a href="https://play.google.com/">
-                    <img src="assets/social/play-store.png" alt="Google Play">
+                    <img src="assets/social/play-store-w.png" alt="Google Play">
                   </a></li>
                 </ul>
             </section>
