"Pagina principal (casi) acabada"

--- a/index.html
+++ b/index.html
@@ -75,23 +75,32 @@
         -->
         </section>
         <section class="main-section">
-          <div class="articulo">
-            <img src="assets/miscelanea/Borrar/crying-banana-cat-meme.png" alt="Artículo 3">
-            <!--<img src="path/to/image1.jpg" alt="Artículo 1">
-            <h2>Categoría 1</h2>-->
-          </div>
-          <div class="articulo">
-            <img src="assets/miscelanea/Borrar/crying-banana-cat-meme.png" alt="Artículo 3">
-            <!--<img src="path/to/image2.jpg" alt="Artículo 2">
-            <h2>Categoría 4</h2>-->
-          </div>
-          <div class="articulo">
-            <img src="assets/miscelanea/Borrar/crying-banana-cat-meme.png" alt="Artículo 3">
-            <p>Aquí van cosas</p>
-            <!--<img src="path/to/image3.jpg" alt="Artículo 3">
-            <h2>Categoría 3</h2>-->
-          </div>
-
+          <!--<div class="main-section-background1"></div>
+          <div class="main-section-background2"></div>-->
+          <article class="articulo">
+            <img src="assets/categorias/collar2-w.png" alt="Artículo 3">
+            <h3 class="categoria">Accesorios</h3>
+          </article>
+          <article class="articulo">
+            <img src="assets/categorias/borreguito2.png" alt="Artículo 3">
+            <h3 class="categoria">Abrigos</h3>
+          </article>
+          <article class="articulo">
+            <img src="assets/categorias/sudadera2.png" alt="Artículo 3">
+            <h3 class="categoria">Sudaderas</h3>
+          </article>
+          <article class="articulo">
+            <img src="assets/categorias/collar2-w.png" alt="Artículo 3">
+            <h3 class="categoria">Accesorios</h3>
+          </article>
+          <article class="articulo">
+            <img src="assets/categorias/collar2-w.png" alt="Artículo 3">
+            <h3 class="categoria">Accesorios</h3>
+          </article>
+          <article class="articulo">
+            <img src="assets/categorias/collar2-w.png" alt="Artículo 3">
+            <h3 class="categoria">Accesorios</h3>
+          </article>
         </section>
         <section class="newsletter">
             <div class= "newsletter-izquierda">
@@ -117,7 +126,7 @@
         </section>
     </main>
     <footer>
-        <div class="footer-background"></div>
+        <!-- <div class="footer-background"></div> -->
         <section class="footer-socials">
             <ul>
               <li><a href="https://facebook.com" target="_blank">
