"Añado imagen disfraces"

--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
           <!--<div class="main-section-background1"></div>
           <div class="main-section-background2"></div>-->
           <article class="articulo">
-            <img src="assets/categorias/collar2-w.png" alt="Artículo 3">
-            <h3 class="categoria">Accesorios</h3>
+            <img src="assets/categorias/salchicha-w.png" alt="Artículo 3">
+            <h3 class="categoria">Disfraces</h3>
           </article>
           <article class="articulo">
-            <img src="assets/categorias/borreguito2.png" alt="Artículo 3">
+            <img src="assets/categorias/borreguito2-w.png" alt="Artículo 3">
             <h3 class="categoria">Abrigos</h3>
           </article>
           <article class="articulo">
-            <img src="assets/categorias/sudadera2.png" alt="Artículo 3">
+            <img src="assets/categorias/sudadera2-w.png" alt="Artículo 3">
             <h3 class="categoria">Sudaderas</h3>
           </article>
           <article class="articulo">
