--- a/borrame.html
+++ b/borrame.html
@@ -20,9 +20,7 @@
 <body>
     <header class="header">
         <div class= "header__background"></div>
-        <a href="/" class="header__logo-link">
-          <img class="header__logo" src="assets/logo/logo2.png" alt="Logo">
-        </a>
+        <img class="header__logo" src="assets/logo/logo2.png" alt="Logo">
         <nav class="header__nav">
             <ul>
                 <li class="header__nav-item"><a href="#inicio" class="header__nav-link">Inicio</a></li>
@@ -126,11 +124,9 @@
         </div>
         <div class="footer__links">
             <ul class="footer__links-list">
-              <li class="footer__links-item"><a href="/acerca-de-nosotros">Sobre nosotros</a></li>
-              <li class="footer__links-item"><a href="/politica-privacidad">Política de privacidad</a></li>
-              <li class="footer__links-item"><a href="/envio-entrega">Envío y entregas</a></li>
-              <li class="footer__links-item"><a href="/terminos-condiciones">Términos y condiciones</a></li>
-              <li class="footer__links-item"><a href="/contacto">Contáctanos</a></li>
+              <li class="footer__links-item"><a href="/acerca-de-nosotros">Acerca de</a></li>
+              <li class="footer__links-item"><a href="/politica-privacidad">Privacidad</a></li>
+              <li class="footer__links-item"><a href="/envio-entrega">Envío</a></li>
             </ul>
         </div>
         <div class="footer__apps">
