"Más responsive aún"

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
         </div>
         <div class="footer__links">
             <ul class="footer__links-list">
-              <li class="footer__links-item"><a href="/acerca-de-nosotros">Sobre nosotros</a></li>
-              <li class="footer__links-item"><a href="/politica-privacidad">Política de privacidad</a></li>
-              <li class="footer__links-item"><a href="/envio-entrega">Envío y entregas</a></li>
-              <li class="footer__links-item"><a href="/terminos-condiciones">Términos y condiciones</a></li>
+              <li class="footer__links-item"><a href="#">Sobre nosotros</a></li>
+              <li class="footer__links-item"><a href="#">Política de privacidad</a></li>
+              <li class="footer__links-item"><a href="#">Envío y entregas</a></li>
+              <li class="footer__links-item"><a href="#">Términos y condiciones</a></li>
               <li class="footer__links-item"><a href="/contacto">Contáctanos</a></li>
             </ul>
         </div>
