--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://db.onlinewebfonts.com/c/9c080e9c6cab37228b6efdfd9fb6e2f9?family=Railey-PersonalUse" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon"> <!-- Icono que aparece en la pestaña del navegador -->
+    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/218b422903.js" crossorigin="anonymous"></script>
-    <meta name="robots" content="index, follow"> <!-- Permite a los motores de búsqueda indexar el sitio -->
+    <meta name="robots" content="index, follow">
 </head>
 <body>
     <header class="header">
