Guardando cambios locales antes de hacer pull

--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
                 </div>
             </div>
             <img class="main__brand-logo" src="assets/logo/logo2.png" alt="Logo">
+            <div>
+              Amamos Lo Que Hacemos
+"En [Nombre de tu web], creemos que cada mascota merece lo mejor. Desde ropa hasta accesorios únicos, trabajamos para crear un mundo más cómodo y divertido para ellos (¡y para ti también!)."
+
+🐾 Diseño pensado en ellos
+🎉 Productos que destacan
+❤️ Pasión por cada detalle
+            </div>
+        </section>
         </section>
         <section class="main__products">
           <article class="product">
