--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </a>
         <nav class="header__nav">
             <ul>
-                <li class="header__nav-item"><a href="#inicio" class="header__nav-link">Inicio</a></li>
-                <li class="header__nav-item"><a href="#servicios" class="header__nav-link">Productos</a></li>
+                <li class="header__nav-item"><a href="index.html" class="header__nav-link">Inicio</a></li>
+                <li class="header__nav-item"><a href="products.html" class="header__nav-link">Productos</a></li>
                 <li class="header__nav-item"><a href="#contacto" class="header__nav-link">Nosotros</a></li>
                 <li class="header__nav-item"><a href="#contacto" class="header__nav-link">Blog</a></li>
             </ul>
@@ -51,41 +51,35 @@
                 </div>
             </div>
             <img class="main__brand-logo" src="assets/logo/logo2.png" alt="Logo">
-            <div>
-              Amamos Lo Que Hacemos
-"En [Nombre de tu web], creemos que cada mascota merece lo mejor. Desde ropa hasta accesorios únicos, trabajamos para crear un mundo más cómodo y divertido para ellos (¡y para ti también!)."
-
-🐾 Diseño pensado en ellos
-🎉 Productos que destacan
-❤️ Pasión por cada detalle
-            </div>
-        </section>
         </section>
         <section class="main__products">
-          <article class="product">
-            <img class="product__image" src="assets/categorias/salchicha-w.png" alt="Artículo 3">
-            <h3 class="product__category">Disfraces</h3>
-          </article>
-          <article class="product">
-            <img class="product__image" src="assets/categorias/borreguito2-w.png" alt="Artículo 3">
-            <h3 class="product__category">Abrigos</h3>
-          </article>
-          <article class="product">
-            <img class="product__image" src="assets/categorias/sudadera2-w.png" alt="Artículo 3">
-            <h3 class="product__category">Sudaderas</h3>
-          </article>
-          <article class="product">
-            <img class="product__image" src="assets/categorias/collar2-w.png" alt="Artículo 3">
-            <h3 class="product__category">Accesorios</h3>
-          </article>
-          <article class="product">
-            <img class="product__image" src="assets/categorias/collar2-w.png" alt="Artículo 3">
-            <h3 class="product__category">Accesorios</h3>
-          </article>
-          <article class="product">
-            <img class="product__image" src="assets/categorias/collar2-w.png" alt="Artículo 3">
-            <h3 class="product__category">Accesorios</h3>
-          </article>
+          <h1 class="products__title">Nuestras categorías</h1>
+          <div class="products__list">
+            <article class="product">
+              <img class="product__image" src="assets/categorias/salchicha-w.png" alt="Artículo 3">
+              <h3 class="product__category">Disfraces</h3>
+            </article>
+            <article class="product">
+              <img class="product__image" src="assets/categorias/borreguito2-w.png" alt="Artículo 3">
+              <h3 class="product__category">Abrigos</h3>
+            </article>
+            <article class="product">
+              <img class="product__image" src="assets/categorias/sudadera2-w.png" alt="Artículo 3">
+              <h3 class="product__category">Sudaderas</h3>
+            </article>
+            <article class="product">
+              <img class="product__image" src="assets/categorias/collar2-w.png" alt="Artículo 3">
+              <h3 class="product__category">Accesorios</h3>
+            </article>
+            <article class="product">
+              <img class="product__image" src="assets/categorias/collar2-w.png" alt="Artículo 3">
+              <h3 class="product__category">Accesorios</h3>
+            </article>
+            <article class="product">
+              <img class="product__image" src="assets/categorias/collar2-w.png" alt="Artículo 3">
+              <h3 class="product__category">Accesorios</h3>
+            </article>
+          </div>
         </section>
         <section class="main__newsletter">
             <div class="newsletter__left">
