--- a/products.html
+++ b/products.html
@@ -3,34 +3,188 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta name="description" content="Tienda en línea de instrumentos musicales">
-    <meta name="keywords" content="instrumentos musicales, guitarras, teclados, percusión, tienda online"> -->
+    <meta name="description" content="Tienda en línea de instrumentos musicales">
+    <meta name="keywords" content="instrumentos musicales, guitarras, teclados, percusión, tienda online">
     <meta name="author" content="Francisco Alba Muñoz">
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <title>Nombre de la tienda</title>
-
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> <!-- Fuentes de Google para mejorar la legibilidad -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="assets/css/styles.css">
-
-    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon"> <!-- Icono que aparece en la pestaña del navegador -->
-
+    <title>Pawfect Store</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/9c080e9c6cab37228b6efdfd9fb6e2f9?family=Railey-PersonalUse" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/218b422903.js" crossorigin="anonymous"></script>
-
     <meta name="robots" content="index, follow">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <div class= "header__background"></div>
+        <a href="/" class="header__logo-link">
+          <img class="header__logo" src="assets/logo/logo2.png" alt="Logo">
+        </a>
+        <nav class="header__nav">
+            <ul>
+                <li class="header__nav-item"><a href="index.html" class="header__nav-link">Inicio</a></li>
+                <li class="header__nav-item"><a href="products.html" class="header__nav-link">Productos</a></li>
+                <li class="header__nav-item"><a href="#contacto" class="header__nav-link">Nosotros</a></li>
+                <li class="header__nav-item"><a href="#contacto" class="header__nav-link">Blog</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-
+        <section class="main__products">
+            <h1 class="products__title">Nuestras categorías</h1>
+            <div class="products__list">
+              <article class="product">
+                <img class="product__image" src="assets/categorias/salchicha-w.png" alt="Artículo 3">
+                <h3 class="product__category">Disfraces</h3>
+              </article>
+              <article class="product">
+                <img class="product__image" src="assets/categorias/borreguito2-w.png" alt="Artículo 3">
+                <h3 class="product__category">Abrigos</h3>
+              </article>
+              <article class="product">
+                <img class="product__image" src="assets/categorias/sudadera2-w.png" alt="Artículo 3">
+                <h3 class="product__category">Sudaderas</h3>
+              </article>
+              <article class="product">
+                <img class="product__image" src="assets/categorias/collar2-w.png" alt="Artículo 3">
+                <h3 class="product__category">Accesorios</h3>
+              </article>
+              <article class="product">
+                <img class="product__image" src="assets/categorias/collar2-w.png" alt="Artículo 3">
+                <h3 class="product__category">Accesorios</h3>
+              </article>
+              <article class="product">
+                <img class="product__image" src="assets/categorias/collar2-w.png" alt="Artículo 3">
+                <h3 class="product__category">Accesorios</h3>
+              </article>
+            </div>
+          </section>
+          <section class="main__sizes">
+            <h3 class="sizes__title">¡Elije su talla!</h3>
+            <table class="size-table">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>
+                            <img class="dog-image" src="assets/miscelanea/Tallas/xxs.png" alt="Perro XXS">
+                            <br>XXS
+                        </th>
+                        <th>
+                            <img class="dog-image" src="assets/miscelanea/Tallas/xs.png" alt="Perro XS">
+                            <br>XS
+                        </th>
+                        <th>
+                            <img class="dog-image" src="assets/miscelanea/Tallas/s.png" alt="Perro S">
+                            <br>S
+                        </th>
+                        <th>
+                            <img class="dog-image" src="assets/miscelanea/Tallas/m.png" alt="Perro M">
+                            <br>M
+                        </th>
+                        <th>
+                            <img class="dog-image" src="assets/miscelanea/Tallas/l.png" alt="Perro L">
+                            <br>L
+                        </th>
+                        <th>
+                            <img class="dog-image" src="assets/miscelanea/Tallas/xl.png" alt="Perro XL">
+                            <br>XL
+                        </th>
+                        <th>
+                            <img class="dog-image" src="assets/miscelanea/Tallas/xxl.png" alt="Perro XXL">
+                            <br>XXL
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Peso</td>
+                        <td>Hasta 2 kg</td>
+                        <td>Hasta 4 kg</td>
+                        <td>Hasta 6 kg</td>
+                        <td>Hasta 12 kg</td>
+                        <td>Hasta 20 kg</td>
+                        <td>Hasta 30 kg</td>
+                        <td>Hasta 40 kg</td>
+                    </tr>
+                    <tr>
+                        <td>Longitud de Espalda</td>
+                        <td>20 - 25 cm</td>
+                        <td>25 - 30 cm</td>
+                        <td>30 - 40 cm</td>
+                        <td>40 - 50 cm</td>
+                        <td>50 - 60 cm</td>
+                        <td>60 - 70 cm</td>
+                        <td>70 - 80 cm</td>
+                    </tr>
+                    <tr>
+                        <td>Circunferencia</td>
+                        <td>30 - 38 cm</td>
+                        <td>38 - 46 cm</td>
+                        <td>46 - 56 cm</td>
+                        <td>56 - 66 cm</td>
+                        <td>66 - 76 cm</td>
+                        <td>76 - 86 cm</td>
+                        <td>86 - 100 cm</td>
+                    </tr>
+            </table>
+          </section>
     </main>
-    <footer>
-        
+    <footer class="footer">
+        <div class="footer__socials">
+            <ul class="footer__socials-list">
+              <li class="footer__socials-item"><a href="https://facebook.com" target="_blank">
+                <img src="assets/social/facebook-w.png" alt="Facebook">
+              </a></li>
+              <li class="footer__socials-item"><a href="https://instagram.com" target="_blank">
+                <img src="assets/social/instagram-w.png" alt="Instagram">
+              </a></li>
+              <li class="footer__socials-item"><a href="https://twitter.com" target="_blank">
+                <img src="assets/social/twitter-w.png" alt="Twitter">
+              </a></li>
+              <li class="footer__socials-item"><a href="https://tiktok.com" target="_blank">
+                <img src="assets/social/tik-tok-w.png" alt="Tik-Tok">
+              </a></li>
+              <li class="footer__socials-item"><a href="https://pinterest.com" target="_blank">
+                <img src="assets/social/pinterest-w.png" alt="Pinterest">
+              </a></li>
+              <li class="footer__socials-item"><a href="https://youtube.com" target="_blank">
+                <img src="assets/social/youtube-w.png" alt="Youtube">
+              </a></li>
+            </ul>
+        </div>
+        <div class="footer__links">
+            <ul class="footer__links-list">
+              <li class="footer__links-item"><a href="#">Sobre nosotros</a></li>
+              <li class="footer__links-item"><a href="#">Política de privacidad</a></li>
+              <li class="footer__links-item"><a href="#">Envío y entregas</a></li>
+              <li class="footer__links-item"><a href="#">Términos y condiciones</a></li>
+              <li class="footer__links-item"><a href="/contacto">Contáctanos</a></li>
+            </ul>
+        </div>
+        <div class="footer__apps">
+            <div class="footer__apps-list">
+                <ul class="footer__apps-items">
+                    <li class="footer__apps-item">
+                        <a class="footer__apps-link" href="https://www.apple.com/app-store/">
+                            <img class="footer__apps-image" src="assets/social/app-store-w.png" alt="App Store">
+                        </a>
+                    </li>
+                    <li class="footer__apps-item">
+                        <a class="footer__apps-link" href="https://play.google.com/">
+                            <img class="footer__apps-image" src="assets/social/play-store-w.png" alt="Google Play">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <p class="footer__copyright">
+                &copy; 2025 Pawfect. Todos los derechos reservados.
+            </p>
+            <p class="footer__slogan">
+                Pelo. Pico. Batas
+            </p>
+        </div>
     </footer>
 </body>
